--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
+    <link href="https://fonts.googleapis.com/css?family=Schoolbell&display=swap" rel="stylesheet">
   </head>
   <body>
 
