chg: fed: buglog, cors image upload

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -20,5 +20,17 @@
     <!-- DO NOT touch the following -->
 
     <!-- built files will be auto injected here -->
+
+    <script>
+      (function(w, d, f, s) {
+        w.buglog = w.buglog || {};
+        buglog.id = 'GM5RG1PX14';
+        f = d.getElementsByTagName('head')[0];
+        s = d.createElement('script');
+        s.async = 1;
+        s.src = 'https://api.buglog.io/website/' + buglog.id + '/code';
+        f.appendChild(s);
+      })(window, document);
+    </script>
   </body>
 </html>
